--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body,
+input,
+button {
+  font-family: "Montserrat", sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+a{
+  text-decoration: none;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+body {
+  background-color: rgb(60, 60, 85);
+  width: 50%;
+  margin: 5% auto;
+  color: #363333;
+}
+.container,
+.container-two {
+  border: 1px solid white;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 1rem 1.5rem;
+  gap: 20px;
+}
+.container-two span {
+  font-weight: bold;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  max-width: 700px;
+}
+.container-two {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+}
+.container-two img {
+  width: 40px;
+}
+.first-section h1 {
+  font-size: 2.8rem;
+  font-weight: 600;
+}
+.first-section p,
+.container-two p {
+  margin-top: 1rem;
+  line-height: 1.5;
+  font-size: 1rem;
+}
+.options {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 0.8rem;
+  font-size: 1rem;
+}
+form {
+  margin-top: 1.7rem;
+}
+form p {
+  opacity: 0.9;
+}
+form input {
+  width: 100%;
+  padding: 17px 20px;
+  margin: 8px 0;
+  border: 1px solid #c9bebe;
+  border-radius: 5px;
+}
+form button,
+.dismiss-btn {
+  width: 100%;
+  padding: 17px 20px;
+  margin: 8px 0;
+  color: white;
+  border-radius: 5px;
+  font-weight: 600;
+  background: rgb(235, 97, 97);
+  cursor: pointer;
+  outline: none;
+  border: none;
+  transition: all 0.3s ease-in;
+}
+form button:hover,
+.dismiss-btn:hover {
+  box-shadow: 0px 23px 32px -7px rgba(94, 94, 94, 0.75);
+  -webkit-box-shadow: 0px 23px 32px -7px rgba(94, 94, 94, 0.75);
+  -moz-box-shadow: 0px 23px 32px -7px rgba(94, 94, 94, 0.75);
+}
+.second-section img {
+  width: 290px;
+  object-fit: cover;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* responsive design */
+@media (max-width: 600px) {
+  body {
+    background-color: white;
+    width: 100%;
+    margin: 0 auto;
+    overflow-x: hidden;
   }
-  to {
-    transform: rotate(360deg);
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 800px;
+    width: 100%;
+  }
+  .container-two {
+    padding: 2rem 0rem 0rem 2rem;
+    width: 100%;
+    margin: 8% auto;
+  }
+  .second-section img {
+    width: 100%;
+    height: 40vh;
+    border-radius: 20px;
+  }
+  .first-section h1 {
+    font-size: 1.7rem;
+  }
+  .first-section p,
+  .container-two p,
+  .options {
+    font-size: 0.9rem;
+  }
+  .container-two p {
+    width: 80%;
+  }
+  .dismiss-btn {
+    margin-top: 13rem;
   }
 }
